[package]
name = "substreams-solana-explorer"
version = "0.1.0"
description = "Substreams showcasing the building blocks of Solana"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-explorers"
license = "Apache 2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.4"
hex-literal = "0.3"
num-bigint = "0.4"
prost = "0.11.9"
# Use latest from https://crates.io/crates/substreams
substreams = "0.5"
# Use latest from https://crates.io/crates/substreams-solana
substreams-solana = { version="0.13.0"}
substreams-solana-program-instructions = "0.1"
substreams-solana-utils = { git = "https://github.com/0xpapercut/substreams-solana-utils", tag = "v0.1.5" ,optional = false}
serde_qs = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

substreams-database-change = "1.0.0"
## added
serde_json = "1.0"


[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
